--- a/book_js/8_parallax/parallax_scrolling.html
+++ b/book_js/8_parallax/parallax_scrolling.html
@@ -19,16 +19,10 @@
 </head>
 
 <body>
-<!-- skipMenu -->
-<div class="skipMenu">
-	<ul>
-		<li><a href="#contents">본문 바로가기</a></li>
-	</ul>
-</div>
-<!-- //skipMenu -->
+
 
 <div class="mWrap">
-	<!--    mContents    -->
+	
 	<div class="mContents" id="contents">
 		<div class="parallax">
 
@@ -37,26 +31,29 @@
 				<div class="obj04"></div>
 				<div class="obj02"></div>
 				<div class="tit">
-					<img src="images/index/mSection01_tit.png" alt="Shinangchon은 자연과 함께합니다 깨끗하고 아름다운 자연의 선물에 정성어린 마음을 담아 언제나 믿을 수 있는 제품을 만들고 있습니다. " />
-					<div class="arrow"><a href="#"><img src="images/index/arrow_up.png" alt="위로" /></a><a href="#"><img src="images/index/arrow_down.png" alt="아래로" /></a></div>
+					<img src="images/index/mSection01_tit.png" />
+					<div class="arrow">
+						<a href="#"><img src="images/index/arrow_down.png" alt="아래로" /></a>
+					</div>
 				</div>
-				<p class="txt"><img src="images/index/mSection01_txt.png" alt="Nature" /></p>
+				<p class="txt"><img src="images/index/mSection01_txt.png" /></p>
 				<div class="obj05"></div>
-				<div class="obj01"></div><!-- 좌에서 우, 위에서 아래 순서로 잎 -->
+				<div class="obj01"></div>
 				<div class="obj03"></div>
 				<div class="obj06"></div>
-				<!--<div class="obj08"></div><!-- 햇빛 -->
 			</div>
 
 			<div class="mSection02">
 				<div class="tit">
-					<img src="images/index/mSection02_tit.png" alt="Shinangchon은 반세기를 지켜온 신뢰가 있습니다. 변함없이 신앙촌 제품을 사랑해주신 고객님들의 신뢰를 바탕으로 신앙촌은 정직과 신용의 대명사가 되었습니다." />
-					<div class="arrow"><a href="#"><img src="images/index/arrow_up_3.png" alt="위로" /></a><a href="#"><img src="images/index/arrow_down.png" alt="아래로" /></a></div>
+					<img src="images/index/mSection02_tit.png" />
+					<div class="arrow">
+						<a href="#"><img src="images/index/arrow_up_3.png" alt="위로" /></a>
+						<a href="#"><img src="images/index/arrow_down.png" alt="아래로" /></a>
+					</div>
 				</div>
 
 				<p class="txt"><img src="images/index/mSection02_txt.png" alt="History" /></p>
-
-				<div class="obj01"></div><!-- 위에서 아래 순서로 사진 -->
+				<div class="obj01"></div>
 				<div class="obj02"></div>
 				<div class="obj03"></div>
 				<div class="obj05"></div>
@@ -64,18 +61,19 @@
 			</div>
 
 			<div class="mSection03">
-				<div class="obj01"></div><!-- 햇빛 -->
+				<div class="obj01"></div>
 				<p class="txt lastChild"><img src="images/index/mSection03_txt.png" alt="Happy" /></p>
-
 				<div class="tit">
 					<img src="images/index/mSection03_tit.png" alt="Shinangchon은 건강과 행복을 생각합니다 모든 사람이 행복할 때까지 신앙촌은 고객 여러분 곁에서 함께할 것을 약속합니다. " />
-					<div class="arrow"><a href="#"><img src="images/index/arrow_up_2.png" alt="위로" /></a><a href="#"><img class="mSection03_arrow" src="images/index/arrow_down_2.png" alt="아래로" /></a></div>
+					<div class="arrow"><a href="#">
+						<a href="#"><img class="mSection03_arrow" src="images/index/arrow_down_2.png" alt="아래로" /></a>
+					</div>
 				</div>
 
 			</div>
 		</div>
 	</div>
-	<!--    //mContents    -->
+	
 </div>
 </body>
 </html>
