--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 				<li class="list-group-item"><a href="./level3/26_cartTest.html">Cart Quiz</a> 
 					<a href="./level3/26_sample.html">Sample</a>
 				</li>
+				<li class="list-group-item"><a href="./level3/26_parallax.html">Parallax</a></li>
 				
 			</ul>
 
@@ -84,6 +85,11 @@
 				<li class="list-group-item"><a href="./jqueryBook/4_scrollMouse/">Scroll, Mouse</a></li>
 		
 			
+			</ul>
+			<hr>
+			<h3>샘플 템플릿</h3>
+			<ul class="list-group">
+				<li class="list-group-item"><a href="./temp/basic/index.html"></a></li>
 			</ul>
 		</div>
 	</div>
