--- a/index.html
+++ b/index.html
@@ -89,7 +89,15 @@
 			<hr>
 			<h3>샘플 템플릿</h3>
 			<ul class="list-group">
-				<li class="list-group-item"><a href="./temp/basic/index.html"></a></li>
+				<li class="list-group-item"><a href="./temp/basic/index.html">Basic Template</a></li>
+			</ul>
+			<h3>lab</h3>
+			<ul class="list-group">
+				<li class="list-group-item"><a href="./lab/27_css.html">CSS</a></li>
+				<li class="list-group-item"><a href="./lab/27_gototop.html">Go to top</a></li>
+				<li class="list-group-item"><a href="./lab/27_slider.html">Slider</a></li>
+				<li class="list-group-item"><a href="./lab/27_topmenu.html">topmenu</a></li>
+				<li class="list-group-item"><a href="./lab/28_duneButton.html">Dune Button</a></li>
 			</ul>
 		</div>
 	</div>
